Getting order right for footer section on desktop, need to fix vertical alignment

--- a/styles/background.module.scss
+++ b/styles/background.module.scss
@@ -167,6 +167,8 @@
   display: flex;
   align-items: center;
   justify-content: flex-start; 
+  align-self: center;
+  height: 100%;
   
   @media (max-width: 768px) {
     justify-content: center; 
@@ -176,6 +178,9 @@
 
 .copyright-text {
   color: white;
+
+  white-space: nowrap; // Prevents text from wrapping
+  overflow: hidden;
   font-size: 12px;
 
   @media (max-width: 768px) {
